--- a/functions/_rem-scale.scss
+++ b/functions/_rem-scale.scss
@@ -1,3 +1,3 @@
 @function rem-scale($increment: 0, $ratio: $rem-scale-ratio) {
-  @return modular-scale(1, $increment, $ratio, "rem");
+  @return modular-scale(1, $increment, $ratio) * 1rem;
 }
