UPDATED: default $modular-scale-ratio to something more sensible UPDATED: rem-calc and em-calc functions to make correct use of the $value param UPDATED: tests to match new $modular-scale-ratio value

--- a/functions/_em-scale.scss
+++ b/functions/_em-scale.scss
@@ -1,3 +1,3 @@
 @function em-scale($increment: 0, $ratio: $em-scale-ratio) {
-  @return modular-scale(1, $increment, $ratio) * 1em;
+  @return modular-scale(1em, $increment, $ratio);
 }
