--- a/tests/tests.css
+++ b/tests/tests.css
@@ -2,7 +2,7 @@
   --should-return-1: 1;
   --should-return-1em: 1em;
   --should-return-2: 2;
-  --should-return-4px: 4px;
+  --should-return-3-point-2px: 3.2px;
   --should-return-4: 4;
   --should-return-8rem: 8rem;
   --should-return-1-point-2rem: 1.2rem;
